[12.December 2008]
- viking.rb, monstermixins.rb:
  'a.XX_on_rect(r).each {}' replaced by 'a.XX_on_rect(r) {}' (less iterations -
  new feature of SchwerEngine::Group)

[11.December 2008]
- trying to solve problem with exitting from Ladder testing level I looked 
  at code of class Exit, added width and height (so that exit area is not
  just the top-left corner, but whole area of the image) and rewrote method 
  Exit#team_exited?, which was awfully uneffective
- added climbing states to models of Olaf and Baleog (although I haven't
  painted special images for them because graphics of vikings should
  be replaced as soon as possible)  
- viking.rb: viking stops moving horizontally before he starts climbing
  (bug fix)
- sophisticatedspritestate.rb: modified method SophisticatedSpriteState#rising?
  so that it returns false when viking is climbing; then he doesn't fall when
  he hits ceiling while climbing, just stops
- gamestate.rb: if development magic is on, F9 kills active viking (sadistic,
  but sometimes useful...)
- game.rb: fix bug which caused crash after the last viking was killed with F9

[7.December 2008]
- sprinter.rb, sophisticatedspritestate.rb: Erik is able again to jump
  when he is walking
- location.rb, viking.rb, shield.rb, sprinter.rb, warior.rb, shielder.rb: 
  added support for z (layer index) (-> shield never more disappears behind 
  other static objects, but fps is probably decreased a bit)
- switch.rb, teleport.rb, helpbutton.rb: methods 'activate' and 'deactivate'
  receive argument
- helpbutton.rb: RD->RDoc
- ladder.rb: code finished (Ladder is ActiveObject now)
- viking.rb, verticalstate.rb, horizontalstate.rb, gamestate.rb:
  Vikings can climb up and down on a ladder.
- Ladder testing level modified (two more ladders, exit achievable only
  by climbing two of them)

[4.December 2008]
- bottompanel.rb, bottompanelstate.rb: "keyboard-driven exchange of items" 
  has more proper visual representation (biggest displaying bug fixed);